tests/snapshots/run_wpt_conformance__coreml_reduceProduct_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float16 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983322823_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([80, 62, 162, 58, 136, 58, 162, 181, 144, 189, 146, 191, 222, 189, 24, 61, 174, 186, 166, 191, 50, 56, 92, 182, 160, 191, 235, 61, 138, 60, 208, 60, 206, 187, 117, 57, 208, 184, 95, 189, 164, 189, 164, 60, 116, 40, 228, 190]);
  }

  nodes {
    [reduceProductOutput] = reduceProduct(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983322823_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
