tests/snapshots/run_wpt_conformance__coreml_reduceProduct_float32_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_product.https.any.js reduceProduct float32 0D constant tensor empty axes, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_prod: Param 'x' has incorrect type for operator 'ios16.reduce_prod'. Expected { tensor<fp32, [?, ...]>, tensor<fp16, [?, ...]>, tensor<int32, [?, ...]> }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([171, 132, 137, 194]);
  }

  nodes {
    [reduceProductOutput] = reduceProduct(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceProductOutput; }
}
